# basictdf

./: .gitignore  README.md  __init__.py  basictdf.py  pyproject.toml  setup.cfg  tdfBlock.py  tdfData3D.py  tdfEvents.py  tdfUtils.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml  test.yml
docs/: index.html
docs/basictdf/: basictdf.html  index.html  tdfBlock.html  tdfCalibrationData.html  tdfData2D.html  tdfData3D.html  tdfEMG.html  tdfEvents.html  tdfForce3D.html  tdfForcePlatformsCalibration.html  tdfForcePlatformsData.html  tdfOpticalSystem.html  tdfTypes.html  tdfUtils.html
src/basictdf/: __init__.py  basictdf.py  tdfBlock.py  tdfCalibrationData.py  tdfData2D.py  tdfData3D.py  tdfEMG.py  tdfEMGBlock.py  tdfEvents.py  tdfForce3D.py  tdfForcePlatformsCalibration.py  tdfForcePlatformsData.py  tdfOpticalSystem.py  tdfTypes.py  tdfUtils.py
tests/: __init__.py  testData3d.py  testEMG.py  testEvents.py  testOpticalSetup.py  testTdf.py  testTypes.py  test_EMG.py  test_ForcePlatformsCalibration.py  test_ForcePlatformsData.py  test_ForceTorque3d.py  test_OpticalSetup.py  test_Tdf.py  test_Types.py  test_calibrationData.py  test_data2D.py  test_data3D.py  test_events.py  tetForceTorque3d.py
tests/test_files/: 2838~aa~Walking 01.tdf
