[tool.poetry]
name = "basictdf"
version = "0.1.0"
description = "A basic TDF parser"
authors = ["Marcos A. Núñez <silver94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.21"
wheel = "^0.40.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 79

[tool.isort]
line_length = 79
profile = "black"
