[tool.poetry]
name = "basictdf"
version = "0.1.0"
description = "A basic TDF parser"
authors = ["Marcos A. Núñez <silver94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
wheel = "^0.40.0"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
ruff = "^0.0.260"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.isort]
line_length = 88
profile = "black"

[tool.ruff]
line-length = 88