[metadata]
name = basictdf
version = 0.0.1
author = Marcos A. Núñez
author_email = mnunez@fleni.org.ar
description = A file parser for BTS Bioengineering TDF files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marnunez/basictdf
project_urls =
    Bug Tracker = https://github.com/marnunez/basictdf/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src